--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3743,6 +3743,13 @@ footer
 {
     padding: 0 15px;
 }
+@media (max-width: 47.9em)
+{
+    .discount-banner
+    {
+        padding: 0 0 30px 0;
+    }
+}
 .discount-banner__item
 {
     width: 100%;
@@ -3759,6 +3766,13 @@ footer
 {
     margin: 0 0 -160px 0;
     padding: 50px 0 0 0;
+}
+@media (max-width: 47.9em)
+{
+    .popular-models
+    {
+        padding: 0;
+    }
 }
 .popular-models__slide-controls
 {
